--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@ html, body {
 }
 
 #search-box label {
-  display: block;
   font-size: 13px;
   font-weight: bold;
-  margin-bottom: 4px;
 }
 
 #comuna-input {
@@ -44,7 +42,6 @@ html, body {
   height: 30px;
   padding: 4px 6px;
   font-size: 14px;
-  box-sizing: border-box;
 }
 
 #dropdown {
@@ -60,7 +57,6 @@ html, body {
 .dropdown-item {
   padding: 6px;
   cursor: pointer;
-  font-size: 14px;
 }
 
 .dropdown-item:hover {
@@ -75,19 +71,19 @@ html, body {
   background: white;
   padding: 12px 16px;
   font-size: 15px;
-  border: 1px solid #ccc;
   border-radius: 6px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  border: 1px solid #ccc;
   z-index: 999;
 }
 
+/* Labels comunas */
 .label-comuna {
   font-size: 11px;
   font-weight: bold;
-  color: #333;
-  background: transparent;
-  border: none;
-  box-shadow: none;
+  color: #444;
+  background: rgba(255,255,255,0.7);
+  padding: 1px 3px;
+  border-radius: 3px;
 }
 </style>
 </head>
@@ -102,9 +98,7 @@ html, body {
 
 <div id="map"></div>
 
-<div class="info" id="info">
-  Seleccione una comuna
-</div>
+<div class="info" id="info">Seleccione una comuna</div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
@@ -115,6 +109,7 @@ html, body {
 
 const FLETE_BASE = 7000;
 const ZOOM_INICIAL = 10;
+const ZOOM_MOSTRAR_LABELS = 12;
 
 const COMUNAS_ACTIVAS = [
   "Cerrillos","Cerro Navia","Conchalí","El Bosque","Estación Central",
@@ -127,10 +122,10 @@ const COMUNAS_ACTIVAS = [
   "Santiago","Vitacura"
 ];
 
+/* 🎨 Colores pastel claros */
 const colores = [
-  "#8dd3c7","#ffffb3","#bebada","#fb8072","#80b1d3",
-  "#fdb462","#b3de69","#fccde5","#d9d9d9","#bc80bd",
-  "#ccebc5","#ffed6f"
+  "#e6f2ff","#fcefe6","#eaf7ea","#fff3cd",
+  "#f2e6ff","#e6fff9","#fde6ec","#f4f4f4"
 ];
 
 /* ===============================
@@ -139,8 +134,6 @@ const colores = [
 
 const map = L.map('map', {
   zoomControl: false,
-  dragging: true,
-  scrollWheelZoom: true,
   minZoom: ZOOM_INICIAL,
   maxZoom: 13
 }).setView([-33.45, -70.66], ZOOM_INICIAL);
@@ -154,9 +147,10 @@ map.setMaxBounds([
 
 let geojson;
 let capasPorComuna = {};
+let labels = [];
 
 /* ===============================
-   FUNCIONES
+   ESTILO COMUNAS
 ================================ */
 
 function estilo(feature) {
@@ -164,8 +158,8 @@ function estilo(feature) {
   return {
     fillColor: colores[index],
     weight: 1,
-    color: "#555",
-    fillOpacity: 0.85
+    color: "#aaa",
+    fillOpacity: 0.7
   };
 }
 
@@ -174,7 +168,7 @@ function destacar(layer) {
   layer.setStyle({
     weight: 3,
     color: "#000",
-    fillOpacity: 1
+    fillOpacity: 0.9
   });
 }
 
@@ -186,7 +180,6 @@ function mostrarInfo(nombre) {
 function irAComuna(nombre) {
   const layer = capasPorComuna[nombre];
   if (!layer) return;
-
   map.fitBounds(layer.getBounds(), { maxZoom: 12 });
   destacar(layer);
   mostrarInfo(nombre);
@@ -197,55 +190,47 @@ function irAComuna(nombre) {
 ================================ */
 
 fetch("https://services3.arcgis.com/uZrwedu11XCCdHk1/ArcGIS/rest/services/Comunas_de_la_RM/FeatureServer/1/query?where=1=1&outFields=*&f=geojson")
-  .then(r => r.json())
-  .then(data => {
+.then(r => r.json())
+.then(data => {
 
-    geojson = L.geoJSON(data, {
-      filter: f => COMUNAS_ACTIVAS.includes(
-        f.properties.NOM_COM || f.properties.COMUNA || ""
-      ),
-      style: estilo,
-      onEachFeature: function (feature, layer) {
+  geojson = L.geoJSON(data, {
+    filter: f => COMUNAS_ACTIVAS.includes(
+      f.properties.NOM_COM || f.properties.COMUNA || ""
+    ),
+    style: estilo,
+    onEachFeature: (feature, layer) => {
+      const nombre = feature.properties.NOM_COM || feature.properties.COMUNA;
+      capasPorComuna[nombre] = layer;
 
-        const nombre =
-          feature.properties.NOM_COM ||
-          feature.properties.COMUNA ||
-          "";
+      const tooltip = layer.bindTooltip(nombre, {
+        permanent: true,
+        direction: "center",
+        className: "label-comuna"
+      });
 
-        capasPorComuna[nombre] = layer;
+      labels.push(tooltip);
+      layer.on("click", () => irAComuna(nombre));
+    }
+  }).addTo(map);
 
-        layer.bindTooltip(nombre, {
-          permanent: true,
-          direction: "center",
-          className: "label-comuna"
-        });
+  map.fitBounds(geojson.getBounds());
 
-        layer.on("click", () => irAComuna(nombre));
-      }
-    }).addTo(map);
+  actualizarLabels();
+});
 
-    map.fitBounds(geojson.getBounds());
+/* ===============================
+   MOSTRAR LABELS SEGÚN ZOOM
+================================ */
 
-    /* ===============================
-       AUTOPISTA AMÉRICO VESPUCIO
-    ================================ */
-
-    fetch("./data/americo_vespucio.geojson")
-      .then(r => r.json())
-      .then(avData => {
-        L.geoJSON(avData, {
-          style: {
-            color: "#c00000",
-            weight: 5,
-            opacity: 0.95
-          }
-        })
-        .bindTooltip("Autopista Américo Vespucio", { sticky: true })
-        .addTo(map);
-      })
-      .catch(err => console.error("Error AV:", err));
-
+function actualizarLabels() {
+  const mostrar = map.getZoom() >= ZOOM_MOSTRAR_LABELS;
+  labels.forEach(t => {
+    if (mostrar) t.openTooltip();
+    else t.closeTooltip();
   });
+}
+
+map.on("zoomend", actualizarLabels);
 
 /* ===============================
    BUSCADOR
@@ -255,35 +240,25 @@ const input = document.getElementById("comuna-input");
 const dropdown = document.getElementById("dropdown");
 
 input.addEventListener("input", () => {
-  const texto = input.value.toLowerCase();
   dropdown.innerHTML = "";
-
-  if (!texto) {
-    dropdown.style.display = "none";
-    return;
-  }
+  const texto = input.value.toLowerCase();
+  if (!texto) return dropdown.style.display = "none";
 
   COMUNAS_ACTIVAS
     .filter(c => c.toLowerCase().includes(texto))
     .forEach(nombre => {
-      const div = document.createElement("div");
-      div.className = "dropdown-item";
-      div.textContent = nombre;
-      div.onclick = () => {
+      const d = document.createElement("div");
+      d.className = "dropdown-item";
+      d.textContent = nombre;
+      d.onclick = () => {
         input.value = nombre;
         dropdown.style.display = "none";
         irAComuna(nombre);
       };
-      dropdown.appendChild(div);
+      dropdown.appendChild(d);
     });
 
   dropdown.style.display = "block";
-});
-
-document.addEventListener("click", e => {
-  if (!document.getElementById("search-box").contains(e.target)) {
-    dropdown.style.display = "none";
-  }
 });
 </script>
 
