--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@ html, body {
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   z-index: 999;
 }
+
+.label-comuna {
+  font-size: 12px;
+  font-weight: bold;
+  color: #222;
+  background: rgba(255,255,255,0.85);
+  padding: 2px 6px;
+  border-radius: 4px;
+  border: 1px solid #aaa;
+}
 </style>
 </head>
 
@@ -145,6 +155,7 @@ map.setMaxBounds([
 
 let geojson;
 let capasPorComuna = {};
+let tooltipActivo = null;
 
 /* ===============================
    FUNCIONES
@@ -181,6 +192,20 @@ function irAComuna(nombre) {
   map.fitBounds(layer.getBounds(), { maxZoom: 12 });
   destacar(layer);
   mostrarInfo(nombre);
+
+  if (tooltipActivo) {
+    map.removeLayer(tooltipActivo);
+    tooltipActivo = null;
+  }
+
+  tooltipActivo = L.tooltip({
+    permanent: true,
+    direction: "center",
+    className: "label-comuna"
+  })
+    .setContent(nombre)
+    .setLatLng(layer.getBounds().getCenter())
+    .addTo(map);
 }
 
 /* ===============================
